Fixed white space issue in Search page

--- a/client/www/css/style.css
+++ b/client/www/css/style.css
@@ -3,7 +3,7 @@
 }
  
 #map {
-    top: 25%;
+    /*top: 25%;*/
     width: 100%;
-    height: 75%;
+    height: 100%;
 }
